--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "resend": "^6.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
